--- a/.bazelrc
+++ b/.bazelrc
@@ -26,6 +26,7 @@ build:dbg --compilation_mode=dbg
 
 # Run race config with race detector
 build:race --@io_bazel_rules_go//go/config:race
+build:race --no@io_bazel_rules_go//go/config:pure
 
 # Only download the final result, the intermediate files can stay on the
 # server side.
@@ -34,6 +35,10 @@ build:remote --noremote_upload_local_results
 
 # Set the execution platform which adds constraints for the scheduler.
 build:remote --extra_execution_platforms=//build/platforms:remote_amd64
+
+# Enable pure by default. Specific go_binary targets which need cgo should set
+# `pure = "off"`.
+build --@io_bazel_rules_go//go/config:pure
 
 # Force netgo and osusergo
 build --@io_bazel_rules_go//go/config:tags=osusergo,netgo
