--- a/osbase/bootparam/BUILD.bazel
+++ b/osbase/bootparam/BUILD.bazel
@@ -18,6 +18,7 @@ go_test(
     ],
     embed = [":bootparam"],
     gc_goopts = ["-d=libfuzzer"],
+    pure = "off",
     deps = [
         "//osbase/bootparam/ref",
         "@com_github_google_go_cmp//cmp",
