--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -57,6 +57,16 @@ single_version_override(
 
 bazel_dep(name = "rules_rust_protobuf", version = RULES_RUST_VERSION)
 bazel_dep(name = "rules_rust_mdbook", version = RULES_RUST_VERSION)
+bazel_dep(name = "libuuid")
+single_version_override(
+    module_name = "libuuid",
+    patch_strip = 1,
+    patches = [
+        "//third_party/libuuid/patches:musl-compat.patch",
+    ],
+    version = "2.39.3.bcr.1",
+)
+
 bazel_dep(name = "zstd", version = "1.5.7")
 bazel_dep(name = "gperf", version = "3.1")
 bazel_dep(name = "zlib", version = "1.3.1.bcr.6")
