--- a/metropolis/cli/takeover/BUILD.bazel
+++ b/metropolis/cli/takeover/BUILD.bazel
@@ -1,5 +1,5 @@
-load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_binary")
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("//osbase/build:def.bzl", "build_static_target")
 load("//osbase/build/mkcpio:def.bzl", "node_initramfs")
 
 node_initramfs(
@@ -57,9 +57,8 @@ go_binary(
     visibility = ["//visibility:public"],
 )
 
-platform_transition_binary(
+build_static_target(
     name = "takeover",
-    binary = ":takeover_bin",
-    target_platform = "//build/platforms:linux_amd64_static",
+    dep = ":takeover_bin",
     visibility = ["//visibility:public"],
 )
