--- a/metropolis/test/e2e/connectivity/agent/BUILD.bazel
+++ b/metropolis/test/e2e/connectivity/agent/BUILD.bazel
@@ -1,7 +1,6 @@
-load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_binary")
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 load("@rules_oci//oci:defs.bzl", "oci_image")
-load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
+load("//build/static_binary_tarball:def.bzl", "static_binary_tarball")
 
 go_library(
     name = "agent_lib",
@@ -20,23 +19,16 @@ go_binary(
     visibility = ["//visibility:private"],
 )
 
-platform_transition_binary(
-    name = "agent_transitioned",
-    binary = ":agent",
-    target_platform = "//build/platforms:linux_amd64_static",
-    visibility = ["//visibility:private"],
-)
-
-pkg_tar(
+static_binary_tarball(
     name = "agent_layer",
-    srcs = [":agent_transitioned"],
+    executable = ":agent",
     visibility = ["//visibility:private"],
 )
 
 oci_image(
     name = "agent_image",
     base = "@distroless_base",
-    entrypoint = ["/agent"],
+    entrypoint = ["/app/metropolis/test/e2e/connectivity/agent/agent_/agent"],
     tars = [":agent_layer"],
     visibility = ["//metropolis/test/e2e:__pkg__"],
     workdir = "/app",
