--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -85,9 +85,7 @@ musl_sysroot_rule(
     snapshot = "//build/toolchain/musl-host-gcc:sysroot.tar.xz",
 )
 
-# Register our custom CC toolchains. Order matters - more specific toolchains must be registered first.
-# (host_cc_toolchain won't care about //build/platforms/linkmode, but musl_host_toolchain won't
-# match anything unless its linkmode is set).
+# Register our custom CC toolchains.
 register_toolchains("//build/toolchain/musl-host-gcc:musl_host_toolchain")
 
 register_toolchains("//build/toolchain/llvm-efi:efi_k8_toolchain")
