--- a/osbase/oci/osimage/BUILD.bazel
+++ b/osbase/oci/osimage/BUILD.bazel
@@ -23,6 +23,7 @@ oci_os_image(
         # the chunking, but also not too large.
         "test": "//third_party/linux",
     },
+    product_info = ":test_product_info.json",
     visibility = ["//osbase/oci:__subpackages__"],
 )
 
@@ -32,6 +33,7 @@ oci_os_image(
         "test": "//third_party/linux",
     },
     compression_level = 0,
+    product_info = ":test_product_info.json",
     visibility = ["//osbase/oci:__subpackages__"],
 )
 
