--- a/metropolis/node/core/tconsole/BUILD.bazel
+++ b/metropolis/node/core/tconsole/BUILD.bazel
@@ -17,13 +17,12 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//metropolis/node/core/network",
+        "//metropolis/node/core/productinfo",
         "//metropolis/node/core/roleserve",
         "//metropolis/proto/common",
-        "//metropolis/version",
         "//osbase/event",
         "//osbase/logtree",
         "//osbase/supervisor",
-        "//version",
         "@com_github_gdamore_tcell_v2//:tcell",
         "@com_github_rivo_uniseg//:uniseg",
     ],
