--- a/metropolis/node/kubernetes/reconciler/BUILD.bazel
+++ b/metropolis/node/kubernetes/reconciler/BUILD.bazel
@@ -16,7 +16,7 @@ go_library(
         "//metropolis/node/core/consensus/client",
         "//metropolis/node/core/curator",
         "//metropolis/node/core/curator/proto/private",
-        "//metropolis/version",
+        "//metropolis/node/core/productinfo",
         "//osbase/event/etcd",
         "//osbase/event/memory",
         "//osbase/supervisor",
@@ -46,13 +46,19 @@ go_test(
         "reconciler_status_test.go",
         "reconciler_test.go",
     ],
+    data = [
+        "//metropolis/node:product_info",
+    ],
     embed = [":reconciler"],
+    x_defs = {
+        "source.monogon.dev/metropolis/node/core/productinfo.path": "$(rlocationpath //metropolis/node:product_info )",
+    },
     deps = [
         "//metropolis/node/core/consensus/client",
         "//metropolis/node/core/curator",
         "//metropolis/node/core/curator/proto/private",
+        "//metropolis/node/core/productinfo",
         "//metropolis/proto/common",
-        "//metropolis/version",
         "//osbase/supervisor",
         "//version",
         "//version/spec",
