--- a/metropolis/node/core/BUILD.bazel
+++ b/metropolis/node/core/BUILD.bazel
@@ -30,20 +30,19 @@ go_library(
         "//metropolis/node/core/metrics",
         "//metropolis/node/core/mgmt",
         "//metropolis/node/core/network",
+        "//metropolis/node/core/productinfo",
         "//metropolis/node/core/roleserve",
         "//metropolis/node/core/rpc/resolver",
         "//metropolis/node/core/tconsole",
         "//metropolis/node/core/time",
         "//metropolis/node/core/update",
         "//metropolis/proto/api",
-        "//metropolis/version",
         "//osbase/bringup",
         "//osbase/logtree",
         "//osbase/net/dns",
         "//osbase/supervisor",
         "//osbase/sysctl",
         "//osbase/tpm",
-        "//version",
         "@com_github_cenkalti_backoff_v4//:backoff",
         "@com_github_containerd_containerd_v2//client",
         "@com_github_containerd_containerd_v2//pkg/namespaces",
