--- a/metropolis/node/core/roleserve/BUILD.bazel
+++ b/metropolis/node/core/roleserve/BUILD.bazel
@@ -30,6 +30,7 @@ go_library(
         "//metropolis/node/core/mgmt",
         "//metropolis/node/core/network",
         "//metropolis/node/core/network/hostsfile",
+        "//metropolis/node/core/productinfo",
         "//metropolis/node/core/rpc",
         "//metropolis/node/core/rpc/resolver",
         "//metropolis/node/core/update",
@@ -38,7 +39,6 @@ go_library(
         "//metropolis/node/kubernetes/pki",
         "//metropolis/proto/api",
         "//metropolis/proto/common",
-        "//metropolis/version",
         "//osbase/event",
         "//osbase/event/memory",
         "//osbase/logtree",
@@ -55,17 +55,23 @@ go_library(
 go_test(
     name = "roleserve_test",
     srcs = ["worker_statuspush_test.go"],
+    data = [
+        "//metropolis/node:product_info",
+    ],
     embed = [":roleserve"],
     # TODO: https://github.com/monogon-dev/monogon/issues/250
     flaky = True,
+    x_defs = {
+        "source.monogon.dev/metropolis/node/core/productinfo.path": "$(rlocationpath //metropolis/node:product_info )",
+    },
     deps = [
         "//metropolis/node",
         "//metropolis/node/core/consensus",
         "//metropolis/node/core/curator",
         "//metropolis/node/core/curator/proto/api",
+        "//metropolis/node/core/productinfo",
         "//metropolis/proto/common",
         "//metropolis/test/util",
-        "//metropolis/version",
         "//osbase/supervisor",
         "@com_github_cenkalti_backoff_v4//:backoff",
         "@com_github_google_go_cmp//cmp",
