metropolis/node: move misplaced packages out of core
abloader, bios_bootcode and minit don't run as part of the core process,
so it doesn't make sense to have them in //metropolis/node/core.
This changes moves these three to //metropolis/node.

Change-Id: I908efb311a138f07a9f1de8e3c23437ff00131ee
Reviewed-on: https://review.monogon.dev/c/monogon/+/4196
Reviewed-by: Tim Windelschmidt <tim@monogon.tech>
Tested-by: Jenkins CI

--- a/metropolis/node/BUILD.bazel
+++ b/metropolis/node/BUILD.bazel
@@ -51,7 +51,7 @@ go_binary(
 erofs_image(
     name = "rootfs",
     files = {
-        "/init": "//metropolis/node/core/minit",
+        "/init": "//metropolis/node/minit",
         "/core": "//metropolis/node/core",
 
         # CA Certificate bundle & os-release & resolv.conf & hosts
@@ -150,8 +150,8 @@ pkg_zip(
 
 node_image(
     name = "image",
-    abloader = "//metropolis/node/core/abloader",
-    bios_bootcode = "//metropolis/node/core/bios_bootcode",
+    abloader = "//metropolis/node/abloader",
+    bios_bootcode = "//metropolis/node/bios_bootcode",
     kernel = ":kernel_efi",
     system = ":verity_rootfs",
     visibility = [
