treewide: replace stampsrcs with embed
A rules_go maintainer suggested using embed instead of stampsrcs:
https://github.com/bazel-contrib/rules_go/issues/3507

For Kubernetes, this means we need to patch the version libraries.
Instead of creating a separate file for each variable, I put them all in
one file, which is parsed in an init function. This init function needs
to run before all other init functions, which access the variables.

Another benefit of this change is that versions are stamped in all
binaries which include Kubernetes client libraries, not just hyperkube.

Change-Id: Ib1157d3686fc35e0c4191d2fc8e165862a1973c7
Reviewed-on: https://review.monogon.dev/c/monogon/+/4208
Tested-by: Jenkins CI
Reviewed-by: Tim Windelschmidt <tim@monogon.tech>

--- a/metropolis/installer/BUILD.bazel
+++ b/metropolis/installer/BUILD.bazel
@@ -7,14 +7,11 @@ go_library(
     name = "installer_lib",
     srcs = ["main.go"],
     embedsrcs = [
+        "//build:copyright_line.txt",  #keep
         "//metropolis/node/abloader",  #keep
     ],
     importpath = "source.monogon.dev/metropolis/installer",
-    stampsrcs = ["//build:stabler_status"],
     visibility = ["//visibility:private"],
-    x_defs = {
-        "copyrightLine": "{STABLER_MONOGON_copyright}",
-    },
     deps = [
         "//osbase/blockdev",
         "//osbase/bringup",
