MODULE: add aarch64 toolchains
This allows us to finally do AArch64 cross-builds for an entire Monogon
OS bundle.

Change-Id: Ide69c3a90d0669cb013619dc6850e93ccd1e45af
Reviewed-on: https://review.monogon.dev/c/monogon/+/4216
Tested-by: Jenkins CI
Reviewed-by: Tim Windelschmidt <tim@monogon.tech>

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -86,6 +86,10 @@ register_toolchains("//build/toolchain:host_cc_toolchain")
 
 register_toolchains("@toolchain_cc_mngn//linux_musl:linux_x86_64_linux_x86_64_musl_static")
 
+register_toolchains("@toolchain_cc_mngn//linux_musl:linux_x86_64_linux_aarch64_musl_static")
+
+register_toolchains("@toolchain_cc_mngn//linux_musl:linux_x86_64_linux_aarch64_musl")
+
 register_toolchains("@toolchain_cc_mngn//efi:linux_x86_64_efi_x86_64")
 
 register_toolchains("@toolchain_cc_mngn//efi:linux_x86_64_efi_aarch64")
