--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -61,6 +61,7 @@ single_version_override(
 )
 
 bazel_dep(name = "boringssl", version = "0.20250514.0")
+bazel_dep(name = "glib", version = "2.82.2.bcr.5")
 bazel_dep(name = "buildifier_prebuilt", version = "8.0.1")
 bazel_dep(name = "bazel_skylib", version = "1.7.1")
 bazel_dep(name = "rules_pkg", version = "1.0.1")
