--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -58,6 +58,7 @@ single_version_override(
 bazel_dep(name = "rules_rust_protobuf", version = RULES_RUST_VERSION)
 bazel_dep(name = "zlib", version = "1.3.1.bcr.6")
 bazel_dep(name = "boringssl", version = "0.20250514.0")
+bazel_dep(name = "libcap", version = "2.27")
 bazel_dep(name = "glib", version = "2.82.2.bcr.5")
 bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
 bazel_dep(name = "bazel_skylib", version = "1.7.1")
