--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -56,6 +56,7 @@ single_version_override(
 )
 
 bazel_dep(name = "rules_rust_protobuf", version = RULES_RUST_VERSION)
+bazel_dep(name = "gperf", version = "3.1")
 bazel_dep(name = "zlib", version = "1.3.1.bcr.6")
 bazel_dep(name = "boringssl", version = "0.20250514.0")
 bazel_dep(name = "libcap", version = "2.27")
