treewide: basic ARM64 fixes
This introduces per-arch kernel configs, adds a basic ARM64 kconfig,
adds ttyAMA0 as a console as well as makes some smaller fixes needed for
basic ARM64 operation. This is not production-ready, but it boots
Monogon on ARM64.

Change-Id: Ifd1d8e33f3fe65883626b8ae7a766c98ea912121
Reviewed-on: https://review.monogon.dev/c/monogon/+/4247
Tested-by: Jenkins CI
Reviewed-by: Tim Windelschmidt <tim@monogon.tech>

--- a/metropolis/installer/BUILD.bazel
+++ b/metropolis/installer/BUILD.bazel
@@ -52,7 +52,7 @@ os_release(
 
 efi_unified_kernel_image(
     name = "kernel",
-    cmdline = "console=ttyS0,115200 console=tty0 quiet",
+    cmdline = "console=ttyS0,115200 console=ttyAMA0 console=tty0 quiet",
     initrd = [
         "//third_party:ucode",
         ":initramfs",
