treewide: replace custom mdbook rules with rules_rust extension
Change-Id: I342080f27cf3b41d0522aec7142b35ab53f1e24e
Reviewed-on: https://review.monogon.dev/c/monogon/+/4256
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/metropolis/handbook/BUILD.bazel
+++ b/metropolis/handbook/BUILD.bazel
@@ -1,7 +1,7 @@
-load("//metropolis/handbook:defs.bzl", "mdbook_html")
+load("@rules_rust_mdbook//:defs.bzl", "mdbook")
 
-mdbook_html(
+mdbook(
     name = "handbook",
     srcs = glob(["src/**/*.md"]),
-    title = "Metropolis Handbook",
+    book = ":book.toml",
 )
