--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -11,6 +11,7 @@ exports_files([
 # gazelle:go_naming_convention import
 # gazelle:exclude **/gomod-generated-placeholder.go
 # gazelle:exclude .bazeldnf/**
+# gazelle:go_grpc_compilers @io_bazel_rules_go//proto:go_proto,@io_bazel_rules_go//proto:go_grpc_v2
 gazelle(name = "gazelle")
 
 gazelle_test(
